# WB_helper

./: .env.template  .gitignore  Makefile  STRUCTURE.txt  docker-compose.yml  otel-collector.yaml  prometheus.yml  pyproject.toml  run.py
app/: alembic.ini  constants.py  main.py
app/alembic/: env.py
app/alembic/versions/: 005b3803d0f2_create_answer_table.py  c09708b7e010_create_item_table.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/wb_feedback_autoanswers/: fake_wb_client.py  ingest_service.py  routes.py  schemas.py  wb_client.py
app/api/v1/wb_feedback_autoanswers/repositories/: answer_repo.py  item_repo.py
app/core/: db_helper.py  flags.py  settings.py
app/core/models/: __init__.py  answer.py  base.py  constants.py  db_helper.py  enums.py  item.py
app/limiter/: token_bucket.py
app/llm/: base.py  openai_like.py
app/mq/: celery_app.py  tasks_feedbacks.py
app/observability/: loggering.py  metrics.py  tracing.py
test/: confest.py
