[project]
name = "ai-replies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "black>=25.1.0",
    "celery>=5.5.3",
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "prometheus-client>=0.22.1",
    "psycopg>=3.2.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "redis>=6.4.0",
    "ruff>=0.12.12",
    "sentry-sdk>=2.37.0",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
